Fix for bug 191920 (P3P Summary button does not work anymore). r=heikki/harishd, sr=jst.